--- a/src/components/myComponents/CardExperience.astro
+++ b/src/components/myComponents/CardExperience.astro
@@ -6,7 +6,7 @@ const { exp, numberProject } = Astro.props;
 ---
 
 <article
-  class="relative snap-center bg-gradient-to-tr from-alx-50 to-alx-100 rounded-2xl px-6 py-8 mx-auto overflow-hidden flex flex-col tablet:sticky tablet:top-4 tablet:flex-row tablet:items-center tablet:text-start gap-6 snap-always focus-visible:ring-2 focus-visible:ring-alx-500"
+  class="relative snap-center bg-gradient-to-tr from-alx-50 to-alx-100 rounded-2xl px-6 py-8 mx-auto overflow-hidden flex flex-col tablet:sticky tablet:top-4 tablet:flex-row tablet:items-center tablet:text-start gap-6 snap-always focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-alx-500"
   class:list={{
     "tablet:mt-0": numberProject === 1,
     "mt-8 tablet:mt-18 laptop:mt-20": numberProject > 1,
@@ -34,7 +34,7 @@ const { exp, numberProject } = Astro.props;
     <div
       class="aspect-square bg-alx-200 border-2 border-alx-600 rounded-full flex-none flex justify-center items-center w-16 relative"
     >
-      <span class="font-poppins text-[1.75rem] font-bold">
+      <span class="font-poppins text-[1.75rem] font-bold text-gray-900">
         {numberProject}
       </span>
 
@@ -58,10 +58,10 @@ const { exp, numberProject } = Astro.props;
   >
     <!-- Badge -->
     <header
-      class="bg-alx-200 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 py-1 px-3 rounded-full uppercase gap-2 sm:px-4 text-xs sm:text-sm text-alx-500"
+      class="bg-alx-200 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 py-1 px-3 rounded-full uppercase gap-2 sm:px-4 text-xs sm:text-sm text-alx-600"
     >
       <span class="relative flex h-2 w-2" aria-hidden="true">
-        <span class="relative inline-flex rounded-full h-2 w-2 bg-alx-500"
+        <span class="relative inline-flex rounded-full h-2 w-2 bg-alx-600"
         ></span>
       </span>
       <span class="font-medium">{exp.role}</span>
@@ -80,7 +80,7 @@ const { exp, numberProject } = Astro.props;
       {exp.title}
     </h3>
 
-    <p class="text-gray-900 text-sm leading-snug">{exp.description}</p>
+    <p class="text-gray-800 text-sm leading-snug">{exp.description}</p>
 
     <!-- Lista de logros -->
     <ul class="mt-4 list-none text-gray-800 space-y-1">
